Fix main positioning/spacing with line height parameter

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,6 +4,7 @@ html {
   font-family: $base-font-family;
   font-size: $base-font-size;
   font-weight: $base-font-weight;
+  line-height: $base-line-height;
   color: $font-color;
   background: $bg-color;
 }
