--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 
 $base-font-family: Times, "Times New Roman", serif;
 $base-font-weight: 400;
+$base-line-height: 1.15;
 
 $base-font-size: 12pt;
 $site-infra-font-size: 1rem * (4/3);
